--- a/emotion_detection.ipynb
+++ b/emotion_detection.ipynb
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "4efa057d",
    "metadata": {},
    "outputs": [],
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4c78c7",
+   "id": "6e513539",
    "metadata": {},
    "source": [
     "# Serialize the data"
@@ -1714,8 +1714,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "8f0fe31b",
+   "execution_count": 11,
+   "id": "19b073e7",
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1913,7 @@
        "[5 rows x 2005 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "ef8a641d",
    "metadata": {},
    "outputs": [],
@@ -1937,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "36026636",
    "metadata": {},
    "outputs": [],
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "7d74a814",
    "metadata": {},
    "outputs": [
@@ -1968,7 +1968,7 @@
        "Name: class, Length: 500, dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1987,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "cda37beb",
    "metadata": {},
    "outputs": [],
@@ -2001,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "e7efc5e0",
    "metadata": {},
    "outputs": [],
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "431d1366",
    "metadata": {},
    "outputs": [
@@ -2044,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "a81e91c8",
    "metadata": {},
    "outputs": [
@@ -2061,7 +2061,7 @@
        "                 ('gradientboostingclassifier', GradientBoostingClassifier())])}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2072,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "2e1c2982",
    "metadata": {},
    "outputs": [
@@ -2142,7 +2142,7 @@
        "       'Happy'], dtype='<U5')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2161,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "ffa0dada",
    "metadata": {},
    "outputs": [],
@@ -2172,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "303944c1",
    "metadata": {},
    "outputs": [
@@ -2195,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "579edd66",
    "metadata": {},
    "outputs": [
@@ -2265,7 +2265,7 @@
        "       'Happy'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2276,9 +2276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "cb05c776",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2297,7 +2299,7 @@
        "Name: class, Length: 500, dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "842368c2",
    "metadata": {},
    "outputs": [],
@@ -2327,7 +2329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "6c75b700",
    "metadata": {},
    "outputs": [],
@@ -2338,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "9b80ee61",
    "metadata": {},
    "outputs": [
@@ -2349,7 +2351,7 @@
        "                ('randomforestclassifier', RandomForestClassifier())])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2360,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "554ddc04",
    "metadata": {},
    "outputs": [
@@ -2368,74 +2370,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sad [0.08 0.74 0.18]\n",
-      "Sad [0.06 0.8  0.14]\n",
-      "Sad [0.06 0.88 0.06]\n",
-      "Sad [0.09 0.82 0.09]\n",
-      "Happy [0.82 0.18 0.  ]\n",
-      "Happy [0.88 0.12 0.  ]\n",
-      "Happy [0.71 0.26 0.03]\n",
-      "Happy [0.46 0.43 0.11]\n",
-      "Sad [0.28 0.51 0.21]\n",
-      "Sad [0.21 0.53 0.26]\n",
-      "Sad [0.06 0.62 0.32]\n",
-      "Sad [0.06 0.59 0.35]\n",
-      "Sad [0.06 0.59 0.35]\n",
-      "Sad [0.06 0.6  0.34]\n",
-      "Sad [0.06 0.59 0.35]\n",
-      "Sad [0.06 0.57 0.37]\n",
-      "Happy [0.46 0.37 0.17]\n",
-      "Happy [0.64 0.28 0.08]\n",
-      "Happy [0.79 0.19 0.02]\n",
-      "Happy [0.78 0.21 0.01]\n",
-      "Happy [0.69 0.25 0.06]\n",
-      "Happy [0.72 0.25 0.03]\n",
-      "Happy [0.66 0.28 0.06]\n",
-      "Happy [0.61 0.34 0.05]\n",
-      "Happy [0.9  0.08 0.02]\n",
-      "Happy [0.98 0.01 0.01]\n",
-      "Happy [0.85 0.04 0.11]\n",
-      "Happy [0.87 0.02 0.11]\n",
-      "Happy [0.86 0.02 0.12]\n",
-      "Happy [0.82 0.01 0.17]\n",
+      "Happy [0.77 0.16 0.07]\n",
+      "Happy [0.77 0.16 0.07]\n",
+      "Happy [0.77 0.16 0.07]\n",
+      "Happy [0.75 0.16 0.09]\n",
+      "Happy [0.72 0.17 0.11]\n",
+      "Happy [0.74 0.15 0.11]\n",
+      "Happy [0.86 0.03 0.11]\n",
+      "Happy [0.89 0.   0.11]\n",
+      "Happy [0.79 0.03 0.18]\n",
       "Happy [0.77 0.02 0.21]\n",
-      "Happy [0.73 0.01 0.26]\n",
-      "Happy [0.63 0.03 0.34]\n",
-      "Happy [0.61 0.04 0.35]\n",
-      "Happy [0.59 0.06 0.35]\n",
-      "Happy [0.57 0.06 0.37]\n",
-      "Happy [0.54 0.06 0.4 ]\n",
-      "Happy [0.44 0.12 0.44]\n",
-      "Yay [0.43 0.12 0.45]\n",
-      "Yay [0.41 0.13 0.46]\n",
-      "Happy [0.44 0.12 0.44]\n",
-      "Happy [0.48 0.07 0.45]\n",
-      "Happy [0.6  0.03 0.37]\n",
-      "Happy [0.68 0.01 0.31]\n",
-      "Happy [0.71 0.   0.29]\n",
-      "Happy [0.74 0.   0.26]\n",
-      "Happy [0.77 0.01 0.22]\n",
-      "Happy [0.77 0.01 0.22]\n",
-      "Yay [0.38 0.14 0.48]\n",
-      "Yay [0.16 0.21 0.63]\n",
-      "Yay [0.16 0.22 0.62]\n",
-      "Yay [0.15 0.25 0.6 ]\n",
-      "Yay [0.25 0.26 0.49]\n",
-      "Yay [0.22 0.27 0.51]\n",
-      "Yay [0.13 0.25 0.62]\n",
-      "Yay [0.11 0.25 0.64]\n",
-      "Yay [0.08 0.28 0.64]\n",
-      "Yay [0.07 0.31 0.62]\n",
-      "Yay [0.09 0.36 0.55]\n",
-      "Yay [0.06 0.39 0.55]\n",
-      "Yay [0.06 0.45 0.49]\n",
-      "Sad [0.04 0.51 0.45]\n",
-      "Sad [0.08 0.55 0.37]\n",
-      "Sad [0.23 0.49 0.28]\n",
-      "Happy [0.79 0.14 0.07]\n",
-      "Happy [0.8  0.14 0.06]\n",
-      "Sad [0.04 0.61 0.35]\n",
-      "Sad [0.  0.6 0.4]\n"
+      "Happy [0.54 0.03 0.43]\n",
+      "Yay [0.39 0.06 0.55]\n",
+      "Happy [0.77 0.02 0.21]\n",
+      "Happy [0.76 0.04 0.2 ]\n",
+      "Happy [0.75 0.03 0.22]\n",
+      "Happy [0.75 0.04 0.21]\n",
+      "Happy [0.8  0.06 0.14]\n",
+      "Happy [0.8  0.06 0.14]\n",
+      "Happy [0.81 0.07 0.12]\n",
+      "Happy [0.87 0.06 0.07]\n",
+      "Happy [0.89 0.06 0.05]\n",
+      "Happy [0.86 0.09 0.05]\n",
+      "Happy [0.88 0.08 0.04]\n",
+      "Happy [0.87 0.05 0.08]\n",
+      "Yay [0.36 0.15 0.49]\n",
+      "Yay [0.04 0.42 0.54]\n",
+      "Sad [0.01 0.5  0.49]\n",
+      "Sad [0.01 0.54 0.45]\n",
+      "Sad [0.01 0.54 0.45]\n",
+      "Sad [0.01 0.57 0.42]\n",
+      "Sad [0.  0.6 0.4]\n",
+      "Sad [0.   0.63 0.37]\n",
+      "Sad [0.02 0.51 0.47]\n",
+      "Yay [0.17 0.25 0.58]\n",
+      "Yay [0.13 0.4  0.47]\n",
+      "Yay [0.1  0.36 0.54]\n",
+      "Yay [0.1  0.31 0.59]\n",
+      "Yay [0.11 0.28 0.61]\n",
+      "Yay [0.26 0.11 0.63]\n",
+      "Yay [0.25 0.11 0.64]\n",
+      "Yay [0.23 0.1  0.67]\n",
+      "Yay [0.31 0.09 0.6 ]\n",
+      "Yay [0.31 0.11 0.58]\n",
+      "Yay [0.31 0.16 0.53]\n",
+      "Yay [0.31 0.14 0.55]\n",
+      "Yay [0.33 0.14 0.53]\n",
+      "Yay [0.3  0.11 0.59]\n",
+      "Yay [0.32 0.13 0.55]\n",
+      "Yay [0.3  0.16 0.54]\n",
+      "Yay [0.29 0.15 0.56]\n",
+      "Yay [0.28 0.17 0.55]\n",
+      "Yay [0.31 0.18 0.51]\n",
+      "Yay [0.37 0.12 0.51]\n",
+      "Yay [0.41 0.12 0.47]\n",
+      "Happy [0.63 0.06 0.31]\n",
+      "Happy [0.81 0.02 0.17]\n",
+      "Happy [0.86 0.02 0.12]\n",
+      "Happy [0.85 0.04 0.11]\n",
+      "Happy [0.85 0.04 0.11]\n",
+      "Happy [0.83 0.05 0.12]\n",
+      "Happy [0.83 0.05 0.12]\n",
+      "Happy [0.85 0.06 0.09]\n",
+      "Happy [0.8  0.07 0.13]\n",
+      "Happy [0.83 0.07 0.1 ]\n",
+      "Happy [0.84 0.1  0.06]\n",
+      "Happy [0.73 0.22 0.05]\n",
+      "Happy [0.44 0.37 0.19]\n",
+      "Yay [0.29 0.27 0.44]\n",
+      "Yay [0.23 0.32 0.45]\n",
+      "Yay [0.21 0.32 0.47]\n",
+      "Yay [0.21 0.36 0.43]\n",
+      "Yay [0.19 0.36 0.45]\n",
+      "Yay [0.17 0.36 0.47]\n",
+      "Yay [0.18 0.35 0.47]\n",
+      "Yay [0.16 0.36 0.48]\n",
+      "Yay [0.16 0.36 0.48]\n",
+      "Yay [0.16 0.37 0.47]\n",
+      "Yay [0.21 0.37 0.42]\n",
+      "Yay [0.22 0.38 0.4 ]\n",
+      "Sad [0.24 0.41 0.35]\n",
+      "Sad [0.31 0.4  0.29]\n",
+      "Sad [0.32 0.39 0.29]\n",
+      "Sad [0.34 0.41 0.25]\n",
+      "Sad [0.36 0.39 0.25]\n",
+      "Sad [0.34 0.39 0.27]\n",
+      "Sad [0.33 0.39 0.28]\n",
+      "Sad [0.33 0.4  0.27]\n",
+      "Sad [0.31 0.4  0.29]\n",
+      "Sad [0.31 0.42 0.27]\n"
      ]
     }
    ],
@@ -2580,7 +2603,27 @@
    "id": "5d73cdc0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "success, frame = camera.read()  # read the camera frame\n",
+    "            if not success:\n",
+    "                break as holistic:\n",
+    "\n",
+    "            else:\n",
+    "                with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e225bd3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ret, buffer = cv2.imencode('.jpg', frame)\n",
+    "        frame = buffer.tobytes()\n",
+    "        yield (b'--frame\\r\\n'\n",
+    "               b'Content-Type: image/jpeg\\r\\n\\r\\n' + frame + b'\\r\\n')  # concat frame one by one and show resul"
+   ]
   }
  ],
  "metadata": {
